[tool.poetry]
name = "python-dsa"
version = "0.1.0"
description = "Python data structures and algorithms"
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
