[tool.poetry]
name = "python-dsa"
version = "0.1.0"
description = "Python data structures and algorithms"
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
tox = "^4.11.3"
coverage = "^7.3.2"
mkdocs-material = "^9.4.10"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "UP"
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = ""
